--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -1,4 +1,4 @@
-<div class="header__overlay header__overlay--toggle js-search-toggle" id="search-mini">
+<div class="header__overlay header__overlay--toggle js-search-toggle js-disabled-hide" id="search-mini">
   <div class="container" ng-controller='GlobalSearchCtrl' ng-cloak>
 
     <%# Search form %>
