rename images centre folder to ie8-maps

--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -16,7 +16,7 @@
       </ul>
     </div>
     <% (1..@centre.number_of_levels).each do |level| %>
-      <img class="map-micello-oldie__map-img hide-fully" data-level="<%= level %>" src="<%= image_path("centre/#{@centre.micello_community}_#{level}.png") %>" alt="Map of shopping centre level <%= level %>">
+      <img class="map-micello-oldie__map-img hide-fully" data-level="<%= level %>" src="<%= image_path("ie8-maps/#{@centre.micello_community}_#{level}.png") %>" alt="Map of shopping centre level <%= level %>">
     <% end %>
   </div>
 <![endif]-->
