Clean up from the angular version revert

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -83,9 +83,9 @@
 
             <div ng-show="activeFilter === 'category'" class="filters__target">
               <span class="arrow arrow--up"></span>
-              <div ng-show="search.categories.field === 'super_cat'" ng-include src=="'categoryItemTemplate'"></div>
-              <div ng-show="search.categories.field === 'category'" ng-include src=="'categoryItemTemplate'"></div>
-              <div ng-show="search.categories.field === 'sub_category'" ng-include src=="'SubCategoryTemplate'"></div>
+              <div ng-show="search.categories.field === 'super_cat'"><div ng-include src="'categoryItemTemplate'"></div></div>
+              <div ng-show="search.categories.field === 'category'"><div ng-include src="'categoryItemTemplate'"></div></div>
+              <div ng-show="search.categories.field === 'sub_category'"><div ng-include src="'SubCategoryTemplate'"></div></div>
             </div>
 
           </li>
