--- a/app/assets/stylesheets/partials/modules/widgets/_map-google-static.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_map-google-static.scss
@@ -13,13 +13,10 @@
     Style Guide -> Modules -> Widgets -> Static Google Map
 
   Credit:
-    http://codepen.io/bradfrost/full/tLxAs
+    http://webdesigntutsplus.s3.amazonaws.com/tuts/365_google_maps/demo/index.html
 */
 
 .map-google-static {
-  /* Will need this for positioning the location address box */
-  position: relative;
-
   /* Hide image so we can use a bg img instead to maintain scale, see: http://webdesigntutsplus.s3.amazonaws.com/tuts/365_google_maps/demo/index.html */
   img {
     opacity: 0;
