--- a/app/assets/stylesheets/partials/modules/_txt-formatted.scss
+++ b/app/assets/stylesheets/partials/modules/_txt-formatted.scss
@@ -85,6 +85,12 @@
 
   /* Inline elements */
   u {text-decoration: none;}
+
+  /* Unstyle the list by removing the bullets. Can be for ul/ol */
+  .txt-formatted__list-unstyled {
+    list-style: none;
+    margin-left: 0;
+  }
 }
 
 /* User generated rules */
