Changing the drop down menu to use icon font for the arrow pointer and some other small mods

--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -128,7 +128,7 @@
 	.btn--main-compact {@include to-em(padding, $spacing-third $spacing-base);}
 
 	/* Compact - extra compact padding (use with icons) */
-	.btn--main-compact-icon {@include to-em(padding, $spacing-half $spacing-half+3.5);}
+	.btn--main-compact-icon {@include to-em(padding, $spacing-half+1 $spacing-half+3.5);}
 
 	/* Large - increase top/btm padding */
 	.btn--main-lrg {@include to-em(padding-top padding-bottom, $spacing-half+$spacing-micro);}
