Removed retina rendering from event images.

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,9 +12,8 @@
     <div class="detail-view__media detail-view__mrg-base">
       <%= fetch_image_tag @event.image,
         alt: @event.name,
-        width: 1276,
-        crop: :limit,
-        quality: 25
+        width: 638,
+        crop: :limit
       %>
     </div>
 
