--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -1,9 +1,8 @@
 <div class="tile__image">
   <%= fetch_image_tag result.image,
     alt: result.name,
-    width: 576,
-    crop: :limit,
-    quality: 25
+    width: 288,
+    crop: :limit
   %>
 </div>
 <div class="tile__meta">
