--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
 
   <ul class="drop-down-menu__list">
     <li ng-repeat="category in search.categories.values | orderBy: 'sort_order'" class="drop-down-menu__divider">
-      <button ng-click="filterCategory( search.categories.field, category.code )" class="btn btn--full btn--full-left">{{ category.name }}</button>
+      <button toggle-visibility="filters" ng-click="filterCategory( search.categories.field, category.code )" class="btn btn--full btn--full-left">{{ category.name }}</button>
     </li>
   </ul>
 </script>
@@ -33,7 +33,7 @@
     </li>
   </ul>
 
-  <button ng-click="mvFilterSearch( 'categories' )" class="btn btn--main btn--sml drop-down-menu__apply">Apply</button>
+  <button toggle-visibility="filters" ng-click="mvFilterSearch( 'categories' )" class="btn btn--main btn--sml drop-down-menu__apply">Apply</button>
 </script>
 <%# //Category %>
 
@@ -125,7 +125,7 @@
                 </li>
               </ul>
 
-              <button ng-click="mvFilterSearch( 'retailers' )" class="btn btn--main drop-down-menu__apply">Apply</button>
+              <button toggle-visibility="filters" ng-click="mvFilterSearch( 'retailers' )" class="btn btn--main drop-down-menu__apply">Apply</button>
 
             </div>
 
@@ -168,7 +168,7 @@
                 </li>
               </ul>
 
-              <button ng-click="mvFilterSearch( 'brands' )" class="btn btn--main drop-down-menu__apply">Apply</button>
+              <button toggle-visibility="filters" ng-click="mvFilterSearch( 'brands' )" class="btn btn--main drop-down-menu__apply">Apply</button>
 
             </div>
 
@@ -206,7 +206,7 @@
                 </li>
               </ul>
 
-              <button ng-click="mvFilterSearch( 'colours' )" class="btn btn--main drop-down-menu__apply">Apply</button>
+              <button toggle-visibility="filters" ng-click="mvFilterSearch( 'colours' )" class="btn btn--main drop-down-menu__apply">Apply</button>
 
             </div>
 
@@ -245,7 +245,7 @@
                 </li>
               </ul>
 
-              <button ng-click="mvFilterSearch( 'sizes' )" class="btn btn--main drop-down-menu__apply">Apply</button>
+              <button toggle-visibility="filters" ng-click="mvFilterSearch( 'sizes' )" class="btn btn--main drop-down-menu__apply">Apply</button>
 
             </div>
 
@@ -284,7 +284,7 @@
                 <input ng-model="search.price.values.range_end" ng-change="rangeFilter('price')" id="price-range-end" class="txt-input">
               </div>
 
-              <button ng-click="updateSearch()" class="btn btn--main drop-down-menu__apply">Apply</button>
+              <button toggle-visibility="filters" ng-click="updateSearch()" class="btn btn--main drop-down-menu__apply">Apply</button>
 
             </div>
 
