--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -1,7 +1,6 @@
 <div class="tile__image">
-  <% # TODO: fix alt tag %>
   <%= fetch_image_tag result.primary_image,
-    alt: result.title,
+    alt: "Photo of #{result.title}",
     width: 576,
     crop: :limit,
     quality: 25
